--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -36,6 +36,7 @@ services:
     env_file: .env
     volumes:
       - ${PWD}/goss:/opt/goss:ro
+      - app_data:/var/www/hotsapi/storage/app
       - ${PWD}/docker/docker-entrypoint-artisan.sh:/opt/docker-entrypoint-artisan.sh
     entrypoint:
       - /opt/docker-entrypoint-artisan.sh
@@ -48,6 +49,8 @@ services:
     image: hotsapidev/webserver:dev
     restart: always
     env_file: .env
+    volumes:
+      - app_data:/var/www/hotsapi/storage/app
     ports:
       - "8888:80"
     environment:
@@ -64,6 +67,7 @@ services:
     restart: always
     env_file: .env
     volumes:
+      - app_data:/var/www/hotsapi/storage/app
       - .gcloud.json:/var/www/hotsapi/.gcloud.json
     command: ['queue:work', '--sleep=3', '--tries=3', '--timeout=60']
     depends_on:
@@ -73,6 +77,8 @@ services:
     image: hotsapidev/hotsapi:dev
     restart: on-failure
     env_file: .env
+    volumes:
+      - app_data:/var/www/hotsapi/storage/app
     command: ['hotsapi:parse']
     depends_on:
       - artisan
@@ -81,6 +87,8 @@ services:
     image: hotsapidev/hotsapi:dev
     restart: always
     env_file: .env
+    volumes:
+      - app_data:/var/www/hotsapi/storage/app
     entrypoint: 'bash -c "while [ true ]; do php artisan schedule:run --verbose --no-interaction & sleep 60; done"'
 
   prune:
@@ -92,3 +100,5 @@ services:
   #   move parser and heroprotocol dockerfiles to respective repos and wrap them as separate services
   #   php artisan migrate --force
   #   update on heroprotocol/c# parser updates
+volumes:
+  app_data:
