--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,34 @@
-version: '2'
+version: '3.8'
 
 volumes:
-  mysql:
+  mariadb:
 
 services:
-  mysql:
-    image: mysql:5.7
+  mariadb:
+    image: mariadb:10.7
     environment:
-      MYSQL_DATABASE: hotsapi
-      MYSQL_ROOT_PASSWORD: secret
+      MARIADB_RANDOM_ROOT_PASSWORD: "yes"
+      MARIADB_DATABASE: hotsapi
+      MARIADB_USER: hotsapi
+      MARIADB_PASSWORD: secret
     volumes:
-      - mysql:/var/lib/mysql
-    # expose port to host machine for easier DB interaction (optional)
-    ports:
-      - 3306:3306
+      - mariadb:/var/lib/mysql
 
   artisan:
     build:
       context: .
       dockerfile: docker/Dockerfile.development
     entrypoint: ["php", "artisan"]
+    environment:
+      - APP_ENV=local
+      - APP_DEBUG=true
+      - APP_KEY=base64:YmFzZTY0X2tleV9fYmFzZTY0
+      - DB_CONNECTION=mysql
+      - DB_HOST=mariadb
+      - DB_PORT=3306
+      - DB_DATABASE=hotsapi
+      - DB_USERNAME=hotsapi
+      - DB_PASSWORD=secret
     volumes:
       - .:/var/www/hotsapi
 
@@ -28,7 +37,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile.development
     ports:
-      - 8080:80
+      - "8080:80"
     volumes:
       - .:/var/www/hotsapi
 
