--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 /.phpstorm.meta.php
 .gcloud.json
 .docker
-.env.prod
+docker-compose.override.yml
+!.env.example
+.env.*
 chef.json
 /misc/
 
@@ -88,6 +90,7 @@ Temporary Items
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
