--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
     volumes:
       - mariadb:/var/lib/mysql
 
+  php-cli:
+    build:
+      context: ./docker/dev
+      dockerfile: php-cli/Dockerfile
+    volumes:
+      - ./:/app
+
   artisan:
     build:
       context: .
