--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,14 @@ end_of_line = lf
 indent_style = space
 indent_size = 4
 insert_final_newline = true
+max_line_length = 120
+trim_trailing_whitespace = true
 
 [Makefile]
-indent_style = unset
+indent_style = tab
+
+[docker-compose*]
+indent_size = 2
+
+[*.{js,css,scss}]
+indent_size = 2
