update composer packages

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "kekdev/hotsapi",
+    "description": "Heroes Of The Storm API",
     "license": "MIT",
     "type": "project",
     "require": {
@@ -55,9 +54,7 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover",
-            "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:meta"
+            "@php artisan package:discover"
         ]
     },
     "config": {
