--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1",
         "barryvdh/laravel-cors": "^0.9.3",
         "doctrine/dbal": "^2.5",
         "fideloper/proxy": "^3.3",
@@ -22,7 +22,8 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "rector/rector": "^0.12.4"
     },
     "autoload": {
         "classmap": [
