--- a/docker/dev/php-fpm/Dockerfile
+++ b/docker/dev/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.0-fpm-alpine
+FROM php:8.0-fpm-alpine
 
 RUN apk -U upgrade && \
 	apk add git curl unzip
@@ -6,7 +6,7 @@ RUN apk -U upgrade && \
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions && \
-    install-php-extensions @composer pdo_mysql mcrypt memcached xdebug zip && \
+    install-php-extensions intl pdo_mysql mcrypt memcached xdebug zip && \
     mv /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
 
 COPY php/conf.d/ /usr/local/etc/php/conf.d/
